# smapp

./: db.sqlite3  pyproject.toml
backend/: settings.py
core/migrations/: 0001_initial.py  0002_alter_profile_slug.py  0003_post_alter_profile_slug.py  0004_likepost_alter_profile_slug.py  0005_followerscount_alter_profile_slug.py  0006_rename_loaction_profile_location_alter_profile_slug.py  0007_alter_profile_pfp_alter_profile_slug.py  0008_alter_profile_pfp_alter_profile_slug.py  0009_alter_profile_pfp_alter_profile_slug.py  0010_alter_profile_slug.py  0011_alter_post_options_alter_post_user_and_more.py  0012_alter_post_user_alter_profile_slug.py  0013_alter_post_user_alter_profile_slug.py  0014_alter_profile_slug.py  0015_alter_post_user_alter_profile_slug.py  0016_alter_profile_slug.py  0017_alter_profile_slug.py  0018_alter_profile_slug.py  0019_remove_profile_user_alter_profile_slug.py  0020_profile_username_alter_profile_slug.py  0021_alter_post_image_alter_profile_slug.py  0022_alter_post_caption_alter_profile_slug.py  0023_remove_profile_location_alter_profile_slug.py  0024_alter_profile_slug.py
staticfiles/: staticfiles.json
